--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,3 +16,9 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
+
+    - name: Set UP nodejs
+      uses: actions/setup-node@v4
+      with:
+        node-version: '23'
+         
