--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,4 +21,15 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '23'
+
+    - name: Comiple FrotEnd
+      run: |
+       cd client
+       find . -name "*.js" -exec node --check {} +
+
+    - name: Comiple BackEnd
+      run: |
+       cd client
+       find . -name "*.js" -exec node --check {} +
+
          
