--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,4 +32,18 @@ jobs:
        cd client
        find . -name "*.js" -exec node --check {} +
 
-         
+  gitleaks-scan:
+    runs-on: Agent-1
+
+    steps:
+    - name: CheckOut Code
+      uses: actions/checkout@v4
+
+    - name: Gitleaks Setup
+      uses: gitleaks/gitleaks-action@v2
+      
+    - name: GitLeaks Scan
+      run: |
+       gitleaks detect --source ./client --exit-code 1
+       gitleaks detect --source ./api --exit-code 1
+
