--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,3 +48,21 @@ jobs:
        gitleaks detect --source ./client --exit-code 1
        gitleaks detect --source ./api --exit-code 1
 
+  trivy_fs_scan:
+    runs-on: Agent-1
+    needs: gitleaks-scan
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        scan-type: fs
+        scan-ref: '.'
+        format: table
+        ignore-unfixed: true
+        severity: 'HIGH,CRITICAL'
+        vuln-type: 'os,library'
+
+
