--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,6 +55,7 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
+
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
@@ -64,5 +65,47 @@ jobs:
         ignore-unfixed: true
         severity: 'HIGH,CRITICAL'
         vuln-type: 'os,library'
+
+  sonar-frontend:
+    runs-on: Agent-1
+    needs: trivy_fs_scan
+
+    steps:
+    - name: CheckOut Code
+      uses: actions/checkout@v4
+    
+    - name: SonarQube Scan Client
+      uses: SonarSource/sonarqube-scan-action@master
+      with:
+        projectBaseDir: client
+        args:
+          -Dsonar.projectKey=myorg_client
+          -Dsonar.projectName=myorg_client
+          -Dsonar.sources=.
+          -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+
+  sonar-backtend:
+    runs-on: Agent-1
+    needs: trivy_fs_scan
+
+    steps:
+    - name: CheckOut Code
+      uses: actions/checkout@v4
+    
+    - name: SonarQube Scan Client
+      uses: SonarSource/sonarqube-scan-action@master
+      with:
+        projectBaseDir: api
+        args:
+          -Dsonar.projectKey=myorg_api
+          -Dsonar.projectName=myorg_api
+          -Dsonar.sources=.
+          -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
 
