--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -83,13 +83,13 @@ jobs:
           -Dsonar.projectName=myorg_client
           -Dsonar.sources=.
           -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
   sonar-backtend:
     runs-on: Agent-1
-    needs: trivy_fs_scan
+    needs: sonar-frontend
 
     steps:
     - name: CheckOut Code
@@ -104,8 +104,8 @@ jobs:
           -Dsonar.projectName=myorg_api
           -Dsonar.sources=.
           -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
 
