--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,7 +85,7 @@ jobs:
           -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   sonar-backtend:
     runs-on: Agent-1
@@ -106,6 +106,6 @@ jobs:
           -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
 
