--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -107,5 +107,58 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  
+  build-backend-image-and-push:
+    runs-on: ubuntu-latest
+    needs: sonar-backtend
 
+    steps:
+    - name: CheckOut Code
+      uses: actions/checkout@v4
+
+    - name: Login to docker Hub
+      uses: docker/login-action@v3
+      with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Buils d & Push Docker image
+      uses: docker/build-push-action@v6
+      with:
+        context: ./api
+        push: true
+        tags: ux007893/backend:latest
+        file: ./api/Dockerfile
+
+  build-frontkend-image-and-push:
+    runs-on: ubuntu-latest
+    needs: build-backend-image-and-push
+
+    steps:
+    - name: CheckOut Code
+      uses: actions/checkout@v4
+
+    - name: Login to docker Hub
+      uses: docker/login-action@v3
+      with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Buils d & Push Docker image
+      uses: docker/build-push-action@v6
+      with:
+        context: ./client
+        push: true
+        tags: ux007893/frontend:latest
+        file: ./client/Dockerfile
 
